test/fixtures/config/theming/error/gulpfileNotFound/.gulp.js
module.exports = {
  msgs: {
    error: {
      gulpfileNotFound: '{TIMESTAMP}NO GULPFILE',
    },
  },
};
